feat: add hexagonal example (wip)