@@ -33,6 +33,7 @@
                 <configuration>
                     <compilerArgs>
                         <arg>-parameters</arg>
+                        <arg>--enable-preview</arg>
                     </compilerArgs>
                     <parameters>${maven.compiler.parameters}</parameters>
                 </configuration>
